# mailparse

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  lint.yml  test.yml
examples/: dump_mail.rs  owned.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse.rs
src/: addrparse.rs  body.rs  dateparse.rs  error.rs  header.rs  headers.rs  lib.rs  macros.rs  msgidparse.rs  util.rs
tests/files/: nested.eml  test_email_01.txt
