[package]
name = "mailparse"
version = "0.12.0"
authors = ["Kartikaya Gupta"]
edition = "2018"
license = "0BSD"

description = "A simple parser for MIME e-mail messages"
homepage = "https://github.com/staktrace/mailparse/blob/master/README.md"
repository = "https://github.com/staktrace/mailparse"
readme = "README.md"
keywords = ["parser", "email", "rfc822", "mime", "maildir"]
categories = ["email", "parsing"]
exclude = [".gitattributes"]

[badges]
travis-ci = { repository = "staktrace/mailparse" }
maintenance = { status = "passively-maintained" }

[dependencies]
base64 = "0.10.0"
quoted_printable = "0.4.2"
charset = "0.1.1"
