[package]
name = "mailparse"
version = "0.16.1"
authors = ["Kartikaya Gupta"]
edition = "2018"
license = "0BSD"

description = "A simple parser for MIME e-mail messages"
homepage = "https://github.com/staktrace/mailparse/blob/master/README.md"
repository = "https://github.com/staktrace/mailparse"
readme = "README.md"
keywords = ["parser", "email", "rfc822", "mime", "maildir"]
categories = ["email", "parsing"]
exclude = [".gitattributes", ".gitignore", ".github/**", "examples/**"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
data-encoding = "2.6.0"
quoted_printable = "0.5.0"
charset = "0.1.3"

[dev-dependencies]
ouroboros = "0.17.0"
